# creft

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo.tape  release-please-config.json
.config/: nextest.toml
.creft/: catalog.json
.creft/commands/: bench.md  changelog.md  check.md  coverage.md  hello.md  linecount.md  lint.md  test.md
.creft/commands/_test/: arg_path_no_clobber.md  arg_path_no_clobber.test.yaml
.creft/commands/_test/pipe/: creft_exit_python_next.md  creft_exit_python_next.test.yaml  creft_exit_with_llm.md  creft_exit_with_llm.test.yaml
.creft/commands/deploy/: install-script.md
.creft/commands/test/: mutants.md
.github/: dependabot.yml  formula.rb.template
.github/workflows/: ci.yml  deploy-install.yml  merge.yml  publish.yml  release.yml
cloudflare/: wrangler.jsonc
cloudflare/workers/: creft-run.js  test.mjs
docs/: skill-reference.md
docs/skills/: session-start.md
npm/: install.js  package.json
plugins/ask/: README.md  ask.md
plugins/fetch/: README.md  fetch.md
plugins/mcp/: README.md  add.md  ls.md  remove.md  sync.md
plugins/schedule/: README.md  add.md  ls.md  parse-cron.md  remove.md  run.md  status.md  update.md
scripts/: install.sh
src/: aliases.rs  catalog.rs  cli.rs  completions.rs  doctor.rs  error.rs  frontmatter.rs  help.rs  install_method.rs  main.rs  markdown.rs  model.rs  namespace.rs  registry.rs  registry_config.rs  runner.rs  settings.rs  setup.rs  shell.rs  store.rs  store_kv.rs  style.rs  update_check.rs  update_notice.rs  validate.rs  wrap.rs  yaml.rs
src/cmd/: alias.rs  doctor.rs  init.rs  mod.rs  plugin.rs  run.rs  settings.rs  setup.rs  skill.rs  skills.rs  update.rs  welcome.rs
src/runner/: channel.rs  mod.rs  pipe.rs  preamble.rs  signal.rs  substitute.rs
src/runner/blocks/: llm.rs  mod.rs  node.rs  python.rs  ruby.rs  shell.rs
src/search/: index.rs  mod.rs  snippet.rs  store.rs  tokenize.rs  xor.rs
src/skill_test/: assertion.rs  coverage.rs  expand.rs  fixture.rs  match_pattern.rs  mod.rs  placeholder.rs  sandbox.rs  scenario.rs
tests/: activate.rs  add.rs  add_test.rs  alias.rs  cwd.rs  doctor.rs  dry_run.rs  edit.rs  help.rs  init.rs  install.rs  legacy_commands.rs  list.rs  llm.rs  remove.rs  rm.rs  run.rs  scope.rs  search.rs  settings.rs  setup.rs  skills_test.rs  stderr.rs  update_check_integration.rs
tests/helpers/: mod.rs
