[package]
name = "creft"
version = "0.2.8"
edition = "2024"
description = "Executable skills for Agents"
license = "MIT"
repository = "https://github.com/chrisfentiman/creft"
homepage = "https://github.com/chrisfentiman/creft"
readme = "README.md"
keywords = ["cli", "ai", "agents", "skills", "markdown"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Chris Fentiman"]

[[bin]]
name = "creft"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
yansi = { version = "1", features = ["detect-tty", "detect-env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
regex = "1"
tempfile = "3"
shell-escape = "0.1"
ureq = "3"
os_pipe = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.26"
pretty_assertions = "1"
serde_json = "1"
