[package]
name = "creft"
version = "0.3.4"
edition = "2024"
description = "Executable skills for Agents"
license = "MIT"
repository = "https://github.com/chrisfentiman/creft"
homepage = "https://github.com/chrisfentiman/creft"
readme = "README.md"
keywords = ["cli", "ai", "agents", "skills", "markdown"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Chris Fentiman"]

[[bin]]
name = "creft"
path = "src/main.rs"

[dependencies]
lexopt = "0.3"
yansi = { version = "1", features = ["detect-tty", "detect-env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-rust2 = { version = "0.11", default-features = false }
thiserror = "2"
regex = "1"
tempfile = "3"
shell-escape = "0.1"
ureq = "3"
indicatif = "0.18"
console = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.26"
pretty_assertions = "1"
serde_json = "1"
